# Linux-Password-Hide

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  key_gen_normal.cpp  key_gen_timed.cpp  utils.cpp  utils.hpp
data/: password_allowance_dates  password_allowance_time_of_day
